--- a/styles.css
+++ b/styles.css
@@ -22,13 +22,15 @@ body {
 
 .image_holder {
   position: fixed;
-  top: 30%;
-  bottom: 20%;
-  left: 25%;
-  right: 25%;
+  top: 25%;
+  bottom: 25%;
+  left: 20%;
+  right: 20%;
+  max-width: 75%;
   background-color: white;
   border: 1px solid red;
   text-align: center;
+  overflow: scroll;
 }
 
 .image_frame {
@@ -38,16 +40,19 @@ body {
   float: right;
 }
 
+
+button{
+  cursor: pointer;
+}
+
 .text_frame {
   position: relative;
-  padding: 20px;
-  margin: 20px;
-  top: 0%;
+  top: 20%;
   left: 10%;
-  width: 40%;
-  float: left;
   text-align: left;
   font-family: Georgia, "Times New Roman", Times, serif;
+  max-width: 35%;
+  overflow: scroll;
 }
 
 img {
@@ -60,7 +65,7 @@ img {
   position: fixed;
   width: 100%;
   height: 10%;
-  bottom: 2%;
+  bottom: 0%;
   padding: 10px 15px;
   align-items: center;
   background-color: #343c4a;
