--- a/styles_work.css
+++ b/styles_work.css
@@ -57,7 +57,7 @@ img {
   position: fixed;
   width: 100%;
   height: 10%;
-  bottom: 2%;
+  bottom: 0%;
   padding: 10px 15px;
   align-items: center;
   background-color: #343c4a;
@@ -134,4 +134,19 @@ img {
   background: #fffc00;
   color: white;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+
+.job-item{
+  position: fixed;
+  left:10%;
+  text-align: left;
+  border: 4px solid red;
+}
+
+.job-period{
+  position: relative;
+  font-size: 12px;
+  right: 0%;
+  color: red;
 }
