--- a/styles_work.css
+++ b/styles_work.css
@@ -142,9 +142,43 @@ img {
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
+
+.container1{
+  position: relative;
+  overflow: scroll;
+  width: 100%;
+  /* border: 1px solid red; */
+}
+
 .job_item{
+  color: black;
+  overflow: scroll;
+  display: block;
+}
+
+.job_title{
   position: relative;
   top: 1%;
-  color: white;
-  z-index: 2;
+  padding: 1%;
+  float: left;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: x-large;
+}
+
+.job_period{
+  position: relative;
+  top: 1%;
+  padding: 1%;
+  right: 25%;
+  float: right;
+  font-family: cursive;
+  font-size: large;
+  color: red;
+}
+
+.job_function{
+  margin: 3px;
+  display: inline;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: medium;
 }
