--- a/styles_work.css
+++ b/styles_work.css
@@ -143,42 +143,41 @@ img {
 }
 
 
-.container1{
-  position: relative;
-  overflow: scroll;
-  width: 100%;
-  /* border: 1px solid red; */
+
+.whole_container{
+
 }
 
 .job_item{
   color: black;
-  overflow: scroll;
-  display: block;
+  margin: 2px;
+  padding: 2px;
+  position: relative;
 }
 
 .job_title{
-  position: relative;
-  top: 1%;
+  top: 2%;
   padding: 1%;
-  float: left;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: x-large;
+  position: relative;
 }
 
 .job_period{
-  position: relative;
-  top: 1%;
+  position: absolute;
+  top: 2%;
   padding: 1%;
-  right: 25%;
-  float: right;
+  right: 20%;
   font-family: cursive;
   font-size: large;
   color: red;
 }
 
 .job_function{
-  margin: 3px;
-  display: inline;
+  left: 1%;
+  bottom: 4%;
+  text-align: left;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: medium;
+  position: relative;
 }
