--- a/styles_project.css
+++ b/styles_project.css
@@ -8,7 +8,7 @@ body {
 
 .footer-1 {
   position: fixed;
-  bottom: 0%;
+  bottom: 0;
   width: 100%;
   padding: 5px;
   height: 50px;
@@ -57,7 +57,7 @@ img {
   position: fixed;
   width: 100%;
   height: 10%;
-  bottom: 2%;
+  bottom: 0%;
   padding: 10px 15px;
   align-items: center;
   background-color: #343c4a;
@@ -74,6 +74,7 @@ img {
   color: white;
   display: inline-block;
 }
+
 .footer_element {
   position: relative;
 }
@@ -135,6 +136,7 @@ img {
   color: white;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+
 
 .container1{
 }
