--- a/styles_education.css
+++ b/styles_education.css
@@ -120,6 +120,11 @@ img {
   color: white;
 }
 
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
 .fa-linkedin {
   background: #007bb5;
   color: white;
