--- a/styles_project.css
+++ b/styles_project.css
@@ -125,7 +125,10 @@ img {
   background: #007bb5;
   color: white;
 }
-
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
 .fa-github {
   background: #007bb5;
   color: white;
