--- a/styles.css
+++ b/styles.css
@@ -147,3 +147,8 @@ img{
   color: white;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
