--- a/styles_skill.css
+++ b/styles_skill.css
@@ -137,6 +137,10 @@ img {
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
 .container1{
 }
 
