--- a/styles_work.css
+++ b/styles_work.css
@@ -142,7 +142,10 @@ img {
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
-
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
 
 .whole_container{
 
